crates/assembly/src/tests/snapshots/miden_assembly__tests__comments__adv_has_map_key.snap
---
source: crates/assembly/src/tests/comments.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(5642583036089175977)
        emit
        drop
        assert(0)
    end
end
