crates/assembly/src/tests/snapshots/miden_assembly__tests__comments__advmap_push.snap
---
source: crates/assembly/src/tests/comments.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(2)
        push(2)
        push(2)
        push(2)
        noop
        noop
        push(17843484659000820118)
        emit
        drop
        assert(0)
    end
end
