crates/assembly/src/tests/snapshots/miden_assembly__tests__comments__advmap_push_nokey.snap
---
source: crates/assembly/src/tests/comments.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(501916723736233444)
        push(15547975544449562078)
        push(6577282105238942297)
        push(3344496476924677563)
        noop
        noop
        push(17843484659000820118)
        emit
        drop
        assert(0)
    end
end
