crates/assembly/src/tests/snapshots/miden_assembly__tests__comments__can_push_constant_word.snap
---
source: crates/assembly/src/tests/comments.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(5)
        push(4)
        push(3)
        push(2)
        noop
        noop
    end
end
