crates/assembly/src/tests/snapshots/miden_assembly__tests__comments__comment_before_program.snap
---
source: crates/assembly/src/tests/comments.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        pad
        incr
        push(2)
        add
    end
end
